# Tech-Challenge

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  projeto.md  pyproject.toml
docs/: arquitetura_deploy.md  business_metric.md  checklist_entrega.md  data_quality_report.md  deep_learning_report.md  dicionario_dados_telco.md  eda_report.md  f1_refinement_report.md  feature_ablation_report.md  ml_canvas.md  mlp_feature_selection_report.md  model_card.md  model_comparison_statistical.md  monitoramento.md  promocao_challenger.md  recomendacao_final.md  roteiro_video_star.md  sklearn_optimization_report.md  sklearn_tuning_report.md
models/mlp/: model_config.json  model_state_dict.pt  preprocessor.joblib
notebooks/: 01_eda_telco.ipynb  02_dados_antes_depois_processamento.ipynb  03_importancia_features_melhor_modelo.ipynb
reports/baselines/: comparison.csv
reports/data_quality/: categorical_domains.csv  class_balance.csv  high_correlations.csv  logical_anomalies.csv  missing_values.csv  numeric_correlation_matrix.csv  numeric_distribution.csv  outliers_iqr.csv  top_encoded_correlations.csv
reports/f1_refinement/: comparison.csv
reports/feature_ablation/: comparison.csv
reports/mlp/: comparison.csv
reports/mlp_feature_selection/: comparison.csv
reports/model_comparison/: fold_scores.csv  statistical_comparison.csv
reports/sklearn_optimization/: comparison.csv
reports/sklearn_tuning/: final_cv_comparison.csv  search_results.csv
src/tech_challenge_churn/: __init__.py  (+1 more)
tests/: test_api.py  test_business_metrics.py  test_config.py  test_cv.py  test_data_load.py  test_data_quality.py  test_f1_refinement.py  test_feature_ablation.py  test_features.py  test_mlp.py  test_mlp_selected.py  test_model_comparison_report.py  test_promote_challenger.py  test_sklearn_optimization.py  test_sklearn_tuning.py
(+29 files in other folders)
